7: initial state